# proofdecomposition

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/pythagorean/: problem.md
prover/: __init__.py  __main__.py  cli.py  config.py  constants.py  graph.py  kb.py  llm.py  runtime.py  schemas.py  trace.py
prover/agents/: __init__.py  base.py  exploration.py  orchestrator.py  parser.py  prover_agent.py  text.py  verifier.py  worker.py
tests/: __init__.py  conftest.py  mock_llm.py  test_runtime.py
